--- a/src/app/htmltopdf/htmltopdf.component.css
+++ b/src/app/htmltopdf/htmltopdf.component.css
@@ -1,1 +1,40 @@
-.invoice-box {margin: auto;padding: 30px;box-shadow: 0 0 10px rgba(0, 0, 0, .15);font-size: 16px;line-height: 24px;font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;color: #555;}.invoice-box table {width: 100%;line-height: inherit;text-align: left;}.invoice-box table td {padding: 5px;vertical-align: top;}.invoice-box table tr td:nth-child(2) {text-align: right;}.invoice-box table tr.top table td {padding-bottom: 20px;}.invoice-box table tr.top table td.title {font-size: 45px;line-height: 45px;color: #333;}.invoice-box table tr.information table td {padding-bottom: 40px;}.invoice-box table tr.heading td {background: #eee;border-bottom: 1px solid #ddd;font-weight: bold;}.invoice-box table tr.details td {padding-bottom: 20px;}.invoice-box table tr.item td{border-bottom: 1px solid #eee;}.invoice-box table tr.item.last td {border-bottom: none;}.invoice-box table tr.total td:nth-child(2) {border-top: 2px solid #eee;font-weight: bold;}.rtl {direction: rtl;font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;}.rtl table {text-align: right;}.rtl table tr td:nth-child(2) {text-align: left;}
+table td{
+    font-family: Arial;
+    font-size:10px;
+}
+table .monthdays td.Wborder{
+    border: 1px solid #000000;
+    text-align:center;
+    vertical-align: bottom;
+}
+table .monthdays td:not(:first-child) span.verticalText {
+    writing-mode: tb-rl;
+    transform: rotate(-90deg);
+    height: 10%;
+}
+table .weekdays td.Wborder{
+    border: 1px solid #000000;
+    text-align:center;
+    vertical-align: bottom;
+}
+table .weekdays td:not(:first-child) span.verticalText {
+    writing-mode: tb-rl;
+    transform: rotate(-90deg);
+    height: 10%;
+}
+table .trheader1 .tdheader1{
+    font-size: 12px;
+    text-align: center;
+}
+table .trheader2 .tdheader2{
+    font-size: 16px;
+    text-align: center;
+    font-weight: bold;
+}
+table .details-attendance td.Wborder{
+    border: 1px solid #000000;
+    text-align:center;
+    white-space:nowrap;
+    vertical-align: bottom;
+    text-align: center;
+}
